# node-whisper-cpp

./: .envrc.example  .gitignore  AGENTS.md  CMakeLists.txt  package.json  tsconfig.json
.github/actions/build-target/: action.yml
.github/workflows/: build-single.yml  build.yml  ci-linux.yml  ci-macos.yml  publish.yml  release.yml
.llm/: dotllm.json
test/: smoke.test.ts
tools/: build.ts  ci.ts  clean.ts  cuda.ts  install.ts  stage.ts
tools/shell/: apt.ts  common.ts  dpkg.ts  github.ts  wget.ts
